crates/codegen/tests/snapshots/snapshots__social__sqlite__follow.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::FromRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
///A directed follow edge.
#[derive(Debug, Clone, PartialEq, FromRow, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct Follow {
    pub follower_id: Uuid,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub follower: ::ruprizzle::Related<Option<super::person::Person>>,
    pub followee_id: Uuid,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub followee: ::ruprizzle::Related<Option<super::person::Person>>,
    pub created_at: DateTime<Utc>,
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct FollowInsert {
    pub follower_id: Uuid,
    pub followee_id: Uuid,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct FollowUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub follower_id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub followee_id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
impl ::ruprizzle::Model for Follow {
    const TABLE: &'static str = "follows";
}
/// Table name for this model.
pub const TABLE: &str = "follows";
pub const FOLLOWER_ID: Column<Follow, Uuid> = Column::new("follows", "follower_id");
pub const FOLLOWEE_ID: Column<Follow, Uuid> = Column::new("follows", "followee_id");
pub const CREATED_AT: Column<Follow, DateTime<Utc>> = Column::new(
    "follows",
    "created_at",
);
/// Returns an `IncludeOne` for this relation.
pub fn follower() -> ::ruprizzle::IncludeOne<
    'static,
    Follow,
    super::person::Person,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeOne::new(
        |parent| parent.follower_id,
        |parent, follower| parent.follower = follower,
        super::person::ID,
        |child| child.id,
    )
}
/// Returns an `IncludeOne` for this relation.
pub fn followee() -> ::ruprizzle::IncludeOne<
    'static,
    Follow,
    super::person::Person,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeOne::new(
        |parent| parent.followee_id,
        |parent, followee| parent.followee = followee,
        super::person::ID,
        |child| child.id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn follower_some(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Follow> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "follows",
        parent_col: "follower_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn follower_none(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Follow> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "follows",
        parent_col: "follower_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn follower_every(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Follow> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "follows",
        parent_col: "follower_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn followee_some(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Follow> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "follows",
        parent_col: "followee_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn followee_none(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Follow> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "follows",
        parent_col: "followee_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn followee_every(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Follow> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "follows",
        parent_col: "followee_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct FollowRepo<'a> {
    db: &'a super::Db,
}
impl<'a> FollowRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, Follow> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(&self, _data: FollowInsert) -> ::ruprizzle::InsertQuery<'a, Follow> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set(FOLLOWER_ID, _data.follower_id);
        insert = insert.set(FOLLOWEE_ID, _data.followee_id);
        insert = insert.set_optional(CREATED_AT, _data.created_at);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<FollowInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, Follow> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("follower_id", ::ruprizzle::Encodable::to_value(&_row.follower_id)),
                    ("followee_id", ::ruprizzle::Encodable::to_value(&_row.followee_id)),
                    ("created_at", ::ruprizzle::Encodable::to_value(&_row.created_at)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, Follow> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, Follow> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
