crates/codegen/tests/snapshots/snapshots__social__sqlite__person.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::FromRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
#[derive(Debug, Clone, PartialEq, FromRow, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct Person {
    pub id: Uuid,
    pub handle: String,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub following: ::ruprizzle::Related<Vec<super::follow::Follow>>,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub followers: ::ruprizzle::Related<Vec<super::follow::Follow>>,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub threads: ::ruprizzle::Related<Vec<super::thread::Thread>>,
    pub created_at: DateTime<Utc>,
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct PersonInsert {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    pub handle: String,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct PersonUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub handle: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub created_at: Option<DateTime<Utc>>,
}
impl ::ruprizzle::Model for Person {
    const TABLE: &'static str = "people";
    const PRIMARY_KEY: &'static str = "id";
}
/// Table name for this model.
pub const TABLE: &str = "people";
pub const ID: Column<Person, Uuid> = Column::new("people", "id");
pub const HANDLE: Column<Person, String> = Column::new("people", "handle");
pub const CREATED_AT: Column<Person, DateTime<Utc>> = Column::new(
    "people",
    "created_at",
);
/// Returns an `IncludeList` for this relation.
pub fn following() -> ::ruprizzle::IncludeList<
    'static,
    Person,
    super::follow::Follow,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.following = __loaded,
        super::follow::FOLLOWER_ID,
        |__child| __child.follower_id,
    )
}
/// Returns an `IncludeList` for this relation.
pub fn followers() -> ::ruprizzle::IncludeList<
    'static,
    Person,
    super::follow::Follow,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.followers = __loaded,
        super::follow::FOLLOWEE_ID,
        |__child| __child.followee_id,
    )
}
/// Returns an `IncludeList` for this relation.
pub fn threads() -> ::ruprizzle::IncludeList<
    'static,
    Person,
    super::thread::Thread,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeList::new(
        |__row| __row.id,
        |__row, __loaded| __row.threads = __loaded,
        super::thread::AUTHOR_ID,
        |__child| __child.author_id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn following_some(
    f: ::ruprizzle::Filter<super::follow::Follow>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "follows",
        child_col: "follower_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn following_none(
    f: ::ruprizzle::Filter<super::follow::Follow>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "follows",
        child_col: "follower_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn following_every(
    f: ::ruprizzle::Filter<super::follow::Follow>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "follows",
        child_col: "follower_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn followers_some(
    f: ::ruprizzle::Filter<super::follow::Follow>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "follows",
        child_col: "followee_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn followers_none(
    f: ::ruprizzle::Filter<super::follow::Follow>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "follows",
        child_col: "followee_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn followers_every(
    f: ::ruprizzle::Filter<super::follow::Follow>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "follows",
        child_col: "followee_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn threads_some(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "author_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn threads_none(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "author_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn threads_every(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Person> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "author_id",
        parent_table: "people",
        parent_col: "id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct PersonRepo<'a> {
    db: &'a super::Db,
}
impl<'a> PersonRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, Person> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(&self, _data: PersonInsert) -> ::ruprizzle::InsertQuery<'a, Person> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set_optional(ID, _data.id);
        insert = insert.set(HANDLE, _data.handle);
        insert = insert.set_optional(CREATED_AT, _data.created_at);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<PersonInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, Person> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("id", ::ruprizzle::Encodable::to_value(&_row.id)),
                    ("handle", ::ruprizzle::Encodable::to_value(&_row.handle)),
                    ("created_at", ::ruprizzle::Encodable::to_value(&_row.created_at)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, Person> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, Person> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
