crates/codegen/tests/snapshots/snapshots__social__sqlite__thread.snap
---
source: crates/codegen/tests/snapshots.rs
expression: content
---
#![allow(clippy::all, clippy::pedantic, unused_imports)]
use ::ruprizzle::serde::{Deserialize, Serialize};
use ::ruprizzle::sqlx::FromRow;
use ::ruprizzle::types::chrono::{DateTime, NaiveDate, NaiveTime, Utc};
use ::ruprizzle::types::{Decimal, Uuid};
use ::ruprizzle::serde_json::Value as JsonValue;
use ::ruprizzle::Related;
use ::ruprizzle::Column;
///A post, optionally a reply to another post.
#[derive(Debug, Clone, PartialEq, FromRow, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct Thread {
    pub id: Uuid,
    pub body: String,
    pub author_id: Uuid,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub author: ::ruprizzle::Related<Option<super::person::Person>>,
    pub parent_id: Option<Uuid>,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub parent: ::ruprizzle::Related<Option<Box<super::thread::Thread>>>,
    #[sqlx(skip)]
    #[serde(skip_serializing_if = "::ruprizzle::Related::is_absent", default)]
    pub replies: ::ruprizzle::Related<Vec<super::thread::Thread>>,
}
/// Insert shape: required fields are required, defaulted/optional fields
/// are `Option` so the database can fill them in.
#[derive(Debug, Clone, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct ThreadInsert {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    pub body: String,
    pub author_id: Uuid,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub parent_id: Option<Uuid>,
}
/// Update shape: every field is `Option` to support explicit nulls.
#[derive(Debug, Clone, Default, Serialize, Deserialize)]
#[serde(crate = "::ruprizzle::serde")]
pub struct ThreadUpdate {
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub body: Option<String>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub author_id: Option<Uuid>,
    #[serde(default, skip_serializing_if = "Option::is_none")]
    pub parent_id: Option<Option<Uuid>>,
}
impl ::ruprizzle::Model for Thread {
    const TABLE: &'static str = "threads";
    const PRIMARY_KEY: &'static str = "id";
}
/// Table name for this model.
pub const TABLE: &str = "threads";
pub const ID: Column<Thread, Uuid> = Column::new("threads", "id");
pub const BODY: Column<Thread, String> = Column::new("threads", "body");
pub const AUTHOR_ID: Column<Thread, Uuid> = Column::new("threads", "author_id");
pub const PARENT_ID: Column<Thread, Uuid> = Column::new("threads", "parent_id");
/// Returns an `IncludeOne` for this relation.
pub fn author() -> ::ruprizzle::IncludeOne<
    'static,
    Thread,
    super::person::Person,
    Uuid,
    (),
> {
    ::ruprizzle::IncludeOne::new(
        |__row| __row.author_id,
        |__row, __loaded| __row.author = __loaded,
        super::person::ID,
        |__child| __child.id,
    )
}
/// Returns a filter for parents that have at least one matching child.
pub fn author_some(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "threads",
        parent_col: "author_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn author_none(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "threads",
        parent_col: "author_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn author_every(
    f: ::ruprizzle::Filter<super::person::Person>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "people",
        child_col: "id",
        parent_table: "threads",
        parent_col: "author_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn parent_some(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "id",
        parent_table: "threads",
        parent_col: "parent_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn parent_none(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "id",
        parent_table: "threads",
        parent_col: "parent_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn parent_every(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "id",
        parent_table: "threads",
        parent_col: "parent_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Returns a filter for parents that have at least one matching child.
pub fn replies_some(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "id",
        parent_table: "threads",
        parent_col: "parent_id",
        filter: Box::new(f.node),
        negated: false,
    })
}
/// Returns a filter for parents that have no matching child.
pub fn replies_none(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "id",
        parent_table: "threads",
        parent_col: "parent_id",
        filter: Box::new(f.node),
        negated: true,
    })
}
/// Returns a filter for parents where every matching child satisfies `f`.
/// Vacuously true for parents with no children.
pub fn replies_every(
    f: ::ruprizzle::Filter<super::thread::Thread>,
) -> ::ruprizzle::Filter<Thread> {
    ::ruprizzle::Filter::new(::ruprizzle::FilterNode::Exists {
        child_table: "threads",
        child_col: "id",
        parent_table: "threads",
        parent_col: "parent_id",
        filter: Box::new((!f).node),
        negated: true,
    })
}
/// Prisma-flavoured repository for `#model_name`.
#[derive(Debug, Clone, Copy)]
pub struct ThreadRepo<'a> {
    db: &'a super::Db,
}
impl<'a> ThreadRepo<'a> {
    /// Creates a new repository handle.
    pub(crate) fn new(db: &'a super::Db) -> Self {
        Self { db }
    }
    /// Start a `find_many` query.
    pub fn find_many(&self) -> ::ruprizzle::SelectQuery<'a, Thread> {
        ::ruprizzle::SelectQuery::new(self.db.raw_pool())
    }
    /// Start an `insert` query.
    pub fn create(&self, _data: ThreadInsert) -> ::ruprizzle::InsertQuery<'a, Thread> {
        let mut insert = ::ruprizzle::InsertQuery::new(self.db.raw_pool());
        insert = insert.set_optional(ID, _data.id);
        insert = insert.set(BODY, _data.body);
        insert = insert.set(AUTHOR_ID, _data.author_id);
        insert = insert.set_optional(PARENT_ID, _data.parent_id);
        insert
    }
    /// Start a multi-row `insert` query.
    pub fn create_many(
        &self,
        _data: Vec<ThreadInsert>,
    ) -> ::ruprizzle::InsertManyQuery<'a, Thread> {
        let mut q = ::ruprizzle::InsertManyQuery::new(self.db.raw_pool());
        for _row in _data {
            q = q
                .row([
                    ("id", ::ruprizzle::Encodable::to_value(&_row.id)),
                    ("body", ::ruprizzle::Encodable::to_value(&_row.body)),
                    ("author_id", ::ruprizzle::Encodable::to_value(&_row.author_id)),
                    ("parent_id", ::ruprizzle::Encodable::to_value(&_row.parent_id)),
                ]);
        }
        q
    }
    /// Start an `update` query.
    pub fn update(&self) -> ::ruprizzle::UpdateQuery<'a, Thread> {
        ::ruprizzle::UpdateQuery::new(self.db.raw_pool())
    }
    /// Start a `delete` query.
    pub fn delete(&self) -> ::ruprizzle::DeleteQuery<'a, Thread> {
        ::ruprizzle::DeleteQuery::new(self.db.raw_pool())
    }
}
